Ledger I71: n4 neutral / n5 ZGC first direction-A win
ZGC under Proton delivers sub-ms pauses (max 0.043ms vs G1's 1376ms)
with lower steady RSS (2.76 vs 4.08GB) at parity load time.
n4's DisableExplicitGC+dedup is mechanism-confirmed but net-neutral.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>